--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^4.13.7",
     "morgan": "~1.9.0",
     "readline": "^1.3.0",
+    "request": "^2.83.0",
     "serve-favicon": "~2.4.5"
   },
   "devDependencies": {
