--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
   "dependencies": {
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
-    "debug": "~2.6.9",
-    "express": "~4.15.5",
+    "debug": "~3.1.0",
+    "express": "~4.16.3",
     "jade": "~1.11.0",
-    "mongoose": "^4.13.7",
+    "mongoose": "~5.0.12",
     "morgan": "~1.9.0",
-    "readline": "^1.3.0",
-    "request": "^2.83.0",
-    "serve-favicon": "~2.4.5"
+    "readline": "~1.3.0",
+    "request": "^2.85.0",
+    "serve-favicon": "~2.5.0"
   },
   "devDependencies": {
-    "nodemon": "^1.14.11"
+    "nodemon": "^1.17.3"
   }
 }
